@@ -72,6 +72,7 @@
 				F58C8A07025BD3BC018635CA,
 				F531DDEC02F0C34D018635CA,
 			);
+			hasScannedForEncodings = 1;
 			isa = PBXProject;
 			knownRegions = (
 				English,
@@ -5781,6 +5782,8 @@
 				F56234DF03026D7301629B47,
 				F56234E003026D7301629B47,
 				F587854C02DE375901EA4122,
+				F5517DC2031AB56301A80180,
+				F5517DC3031AB56301A80180,
 				F587854D02DE375901EA4122,
 				F587854E02DE375901EA4122,
 				F587854F02DE375901EA4122,
@@ -5798,8 +5801,6 @@
 				F587855502DE375901EA4122,
 				F58EF58E02DFDFB7018635CA,
 				F58EF58D02DFDFB7018635CA,
-				F5517DC2031AB56301A80180,
-				F5517DC3031AB56301A80180,
 			);
 			isa = PBXGroup;
 			name = "WebCore SPI";
