@@ -1,3 +1,14 @@
+2002-09-04  Darin Adler  <darin@apple.com>
+
+        * WebCore.pbproj/project.pbxproj:
+        * kwq/KWQObject.mm:
+        * kwq/KWQPainter.mm:
+        * kwq/KWQTimer.mm:
+        * kwq/WebCoreCookieAdapter.h:
+        * kwq/WebCoreImageRenderer.h:
+        * kwq/WebCoreImageRendererFactory.h:
+	Tweaks, no substantive changes.
+
 2002-09-02  David Hyatt  <hyatt@apple.com>
 
 	Tweak the damage rect testing to account for the fact that a child
